css and js from github

--- a/blogspot/template.html
+++ b/blogspot/template.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Union Builder</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/main.js" defer></script>
+    <link rel="stylesheet" href="https://shaarawi.github.io/union-builder-blogspot-gas/blogspot/assets/css/style.css">
+    <script src="https://shaarawi.github.io/union-builder-blogspot-gas/blogspot/assets/js/main.js" defer></script>
 </head>
 <body>
     <header>
